<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G1314" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="FizzBuzz" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rlQ-qW-Tfe">
                                <rect key="frame" x="266" y="607" width="99" height="40"/>
                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
                                <state key="normal" title="Play Again">
                                    <color key="titleColor" red="0.97254901960784312" green="0.95294117647058818" blue="0.83137254901960778" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="paylAgain:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uks-c8-d7T"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3/5" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r92-cb-wiY">
                                <rect key="frame" x="333.5" y="40" width="31.5" height="27.5"/>
                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
                                <color key="textColor" red="0.97254901959999995" green="0.95294117649999999" blue="0.83137254900000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ber-nX-ZRE" userLabel="GameView">
                                <rect key="frame" x="40" y="186" width="294" height="294"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Iy-kj-65N">
                                        <rect key="frame" x="0.0" y="0.0" width="141" height="141"/>
                                        <accessibility key="accessibilityConfiguration" identifier="numberButton"/>
                                        <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="70"/>
                                        <state key="normal" title="0" backgroundImage="button_border">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <connections>
                                            <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="auB-Fw-Ytd"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="njY-5r-chb">
                                        <rect key="frame" x="153" y="0.0" width="141" height="141"/>
                                        <accessibility key="accessibilityConfiguration" identifier="fizzButton"/>
                                        <state key="normal" image="champagne" backgroundImage="button_border"/>
                                        <connections>
                                            <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pKA-UL-kAG"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q1d-bR-pcH">
                                        <rect key="frame" x="0.0" y="153" width="141" height="141"/>
                                        <accessibility key="accessibilityConfiguration" identifier="buzzButton"/>
                                        <state key="normal" image="lightning" backgroundImage="button_border"/>
                                        <connections>
                                            <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="feu-j3-btc"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hdS-fw-F5P">
                                        <rect key="frame" x="153" y="153" width="141" height="141"/>
                                        <accessibility key="accessibilityConfiguration" identifier="fizzBuzzButton"/>
                                        <state key="normal" image="space" backgroundImage="button_border"/>
                                        <connections>
                                            <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uXs-ie-M21"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                <constraints>
                                    <constraint firstAttribute="trailing" secondItem="njY-5r-chb" secondAttribute="trailing" id="4w0-QP-Dc7"/>
                                    <constraint firstAttribute="width" secondItem="Ber-nX-ZRE" secondAttribute="height" multiplier="1:1" id="8ht-Mp-1UC"/>
                                    <constraint firstItem="9Iy-kj-65N" firstAttribute="height" secondItem="Ber-nX-ZRE" secondAttribute="height" multiplier="0.48" id="A6J-e9-6JS"/>
                                    <constraint firstItem="Q1d-bR-pcH" firstAttribute="height" secondItem="9Iy-kj-65N" secondAttribute="height" id="Mtg-uX-5Ab"/>
                                    <constraint firstItem="njY-5r-chb" firstAttribute="top" secondItem="Ber-nX-ZRE" secondAttribute="top" id="RVz-rR-scO"/>
                                    <constraint firstItem="njY-5r-chb" firstAttribute="height" secondItem="9Iy-kj-65N" secondAttribute="height" id="TCb-Ij-Vev"/>
                                    <constraint firstItem="Q1d-bR-pcH" firstAttribute="width" secondItem="9Iy-kj-65N" secondAttribute="width" id="WO1-yz-etS"/>
                                    <constraint firstItem="Q1d-bR-pcH" firstAttribute="leading" secondItem="Ber-nX-ZRE" secondAttribute="leading" id="dPB-PR-yXg"/>
                                    <constraint firstItem="9Iy-kj-65N" firstAttribute="leading" secondItem="Ber-nX-ZRE" secondAttribute="leading" id="fj1-12-q93"/>
                                    <constraint firstAttribute="bottom" secondItem="Q1d-bR-pcH" secondAttribute="bottom" id="h2V-gk-r4Z"/>
                                    <constraint firstItem="njY-5r-chb" firstAttribute="width" secondItem="9Iy-kj-65N" secondAttribute="width" id="hLJ-um-dgh"/>
                                    <constraint firstItem="hdS-fw-F5P" firstAttribute="width" secondItem="9Iy-kj-65N" secondAttribute="width" id="ks8-kD-YF2"/>
                                    <constraint firstItem="9Iy-kj-65N" firstAttribute="top" secondItem="Ber-nX-ZRE" secondAttribute="top" id="l1p-dD-ct5"/>
                                    <constraint firstItem="hdS-fw-F5P" firstAttribute="height" secondItem="9Iy-kj-65N" secondAttribute="height" id="mmT-Iz-L51"/>
                                    <constraint firstAttribute="trailing" secondItem="hdS-fw-F5P" secondAttribute="trailing" id="pIr-A8-HAh"/>
                                    <constraint firstAttribute="bottom" secondItem="hdS-fw-F5P" secondAttribute="bottom" id="sRa-Mi-Co4"/>
                                    <constraint firstItem="9Iy-kj-65N" firstAttribute="width" secondItem="Ber-nX-ZRE" secondAttribute="width" multiplier="0.48" id="yB1-7q-2Iy"/>
                                </constraints>
                            </view>
                        </subviews>
                        <color key="backgroundColor" red="0.0" green="0.72156862745098038" blue="0.66274509803921566" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="Ber-nX-ZRE" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="3bF-vc-uwJ"/>
                            <constraint firstItem="Ber-nX-ZRE" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="40" id="4hu-3e-LtV"/>
                            <constraint firstItem="Ber-nX-ZRE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="CCc-Jf-wBs"/>
                            <constraint firstItem="r92-cb-wiY" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="TNK-Nc-ANg"/>
                            <constraint firstAttribute="trailing" secondItem="rlQ-qW-Tfe" secondAttribute="trailing" constant="10" id="XNd-sB-uPe"/>
                            <constraint firstAttribute="trailing" secondItem="r92-cb-wiY" secondAttribute="trailing" constant="10" id="dvg-yE-nh1"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="rlQ-qW-Tfe" secondAttribute="bottom" constant="20" id="mJb-g4-Sn9"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="buzzButton" destination="Q1d-bR-pcH" id="Tas-Sv-iic"/>
                        <outlet property="fizzButton" destination="njY-5r-chb" id="OY9-j8-IiC"/>
                        <outlet property="fizzbuzzButton" destination="hdS-fw-F5P" id="w8V-8G-Cl6"/>
                        <outlet property="numberButton" destination="9Iy-kj-65N" id="TOA-8P-W99"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="117.59999999999999" y="122.78860569715144"/>
        </scene>
    </scenes>
    <resources>
        <image name="button_border" width="400" height="400"/>
        <image name="champagne" width="49" height="50"/>
        <image name="lightning" width="29" height="50"/>
        <image name="space" width="47" height="50"/>
    </resources>
</document>
